[gd_scene load_steps=3 format=3 uid="uid://cyp3gh0fohx4q"]

[ext_resource type="Script" uid="uid://4k4dn0q8t23h" path="res://telas/minigames/missao_vitaminas/scripts/bio_fato_vitaminas.gd" id="1_ovdyo"]
[ext_resource type="PackedScene" uid="uid://c0nkhbv8diqwc" path="res://telas/interface/bioFato/bio_fato.tscn" id="2_5u6pj"]

[node name="BioFatoVitaminas" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovdyo")

[node name="BioFato" parent="." instance=ExtResource("2_5u6pj")]
layout_mode = 1

[node name="FactLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.207
anchor_top = 0.49
anchor_right = 0.778
anchor_bottom = 0.565
offset_left = -0.0400085
offset_top = -8.20001
offset_right = -0.160034
offset_bottom = 23.8
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.380392, 0.231373, 0.0980392, 1)
theme_override_font_sizes/font_size = 22
text = "Curiosidades
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="botao_continuar_pressed" from="BioFato" to="." method="_on_botao_continuar_pressed"]
